--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Will you be my Valentine?</h1>
+        <h1>Rapha/babi/lovie, will you be my Valentine?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         <div class="gif_container">
-            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExeG8zdmhoYnNxMXMwdWg0YjU0bDIya3M5dnVrcnU3OWJqNWJldjU0YyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/y93x7gLXTO5dnSWCEI/giphy.gif" alt="Cute GIF">
         </div>
     </div>
     <script src="script.js"></script>
