--- a/yes_page.html
+++ b/yes_page.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes!</title>
+    <title>Yippy!</title>
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
+        <h1 class="header_text">Yay! I love you so much!</h1>
         <div class="gif_container">
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmR5YzNjM2FzOWgybDZrcmh1a2tzbGR3bmRnODZsa3Nja3M3aHU4dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/12vXrAZhMazV7y/giphy.gif">
         </div>
     </div>
 </body>
